# sec-filings-rag

./: .gitignore
gateway/: go.mod  go.sum  main.go
retrieval/: .gitignore  main.py  pyproject.toml
retrieval/engine/: api.py  cli.py
retrieval/engine/fetching/: browse.py
retrieval/engine/models/: filing.py
retrieval/engine/store/: storage.py
retrieval/engine/utils/: timestamps.py
ui/: index.html
ui/src/: App.jsx  index.css
