[project]
name = "retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.138.0",
    "requests>=2.34.2",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[project.scripts]
sec = "engine.cli:app"
